# ros2-arm-teleoperation-suite

./: .env  .gitattributes  .gitignore  README.md  pyrightconfig.json  pytest.ini  requirements.txt
.agents/skills/ros2-teleop-dev/: SKILL.md
.agents/skills/ros2-teleop-dev/references/: can_kdl_reference.md  mujoco_api_cheatsheet.md
config/: can_config.yaml  controller_params.yaml  randomization.yaml
config/lerobot/: act_m6_dataset.yaml
config/models/: franka_panda.xml
docs/: ARCHITECTURE_V2.md  DESIGN_SPEC.md  INTER_REPO_CONTRACTS.md  MEDIA_CAPTURE_PLAN.md  POLICY_DEPLOYMENT.md  PROJECT_SCOPE_AND_ACCEPTANCE.md  README.md  ROADMAP.md  SPEC_M1_CAN_RS485.md  SPEC_M2_MUJOCO_BRIDGE.md  SPEC_M3_IMPEDANCE_CTRL.md  SPEC_M4_FULL_PIPELINE.md  SPEC_M5_LEROBOT_RECORDER.md  SPEC_V2_M1_CONTROL_SKELETON.md  SPEC_V2_M2_CANOPEN_FIELDBUS.md  SPEC_V2_M3_IMPEDANCE_CTRL.md  SPEC_V2_M4_MOTION_LAYER.md  SPEC_V2_M5_SAFETY_LAYER.md  SPEC_V2_M6_PERCEPTION_RECORDER.md  SPEC_V2_M7_TELEOP_SYNTH.md  XBOX_GAMEPAD_GUIDE.md
media/m6/: capture_manifest.json
scripts/: capture_m6_media.py  capture_m7_demo.sh  collect_media_evidence.sh  generate_m5_m7_media.py  install_deps.sh  open_safety_monitor.sh  publish_dummy_heartbeat.py  record_demo_gif.py  servo_post_init.sh  setup_vcan.sh  stop_stack.sh  validate_m4_motion_layer.sh  validate_m5_safety_layer.sh  validate_m6_perception_recorder.sh
src/camera_bridge/: package.xml  setup.cfg  setup.py
src/camera_bridge/camera_bridge/: camera_bridge_node.py
src/canopen_hw_interface/: CMakeLists.txt  canopen_hw_interface.xml  package.xml
src/canopen_hw_interface/config/: can_config.yaml
src/canopen_hw_interface/include/canopen_hw_interface/: canopen_system.hpp
src/canopen_hw_interface/src/: canopen_system.cpp
src/gripper_driver/: package.xml  setup.cfg  setup.py
src/gripper_driver/gripper_driver/: gripper_modbus_node.py
src/gripper_driver/test/: test_colcon_gripper_driver.py
src/lerobot_recorder/: package.xml  setup.cfg  setup.py
src/lerobot_recorder/lerobot_recorder/: lerobot_writer.py  recorder_node.py  time_sync.py
src/lerobot_recorder/test/: test_colcon_lerobot_recorder.py
src/mujoco_sim/: package.xml  setup.py
src/mujoco_sim/mujoco_sim/: domain_randomizer.py  mujoco_sim_node.py  virtual_camera.py
src/mujoco_sim/test/: test_colcon_domain_randomizer.py  test_colcon_mujoco_sim_fallback_fk.py
src/safety_monitor/: CMakeLists.txt  package.xml
src/safety_monitor/config/: aggregator.yaml  safety_limits.yaml
src/safety_monitor/include/safety_monitor/: comm_watchdog.hpp  estop_manager.hpp  joint_limit_monitor.hpp  joint_state_utils.hpp  velocity_limit_monitor.hpp  workspace_limit_monitor.hpp
src/safety_monitor/launch/: safety.launch.py
src/safety_monitor/src/: safety_monitor_node.cpp
src/safety_monitor/test/: test_safety_monitor.cpp
src/synth_data_gen/: package.xml  setup.cfg  setup.py
src/synth_data_gen/resource/: synth_data_gen
src/synth_data_gen/synth_data_gen/: batch_generator.py
src/teleop_bringup/: CMakeLists.txt  package.xml
src/teleop_bringup/config/: controllers.yaml
src/teleop_bringup/launch/: data_collection.launch.py  fieldbus.launch.py  full_system.launch.py  m1_control_sim.launch.py  m2_fieldbus.launch.py  motion.launch.py  recording.launch.py  ros2_control.launch.py  simulation.launch.py
src/teleop_controllers/: CMakeLists.txt  controllers_plugin.xml  package.xml
src/teleop_controllers/config/: impedance_params.yaml
src/teleop_controllers/include/teleop_controllers/: cartesian_impedance_controller.hpp  impedance_math.hpp  joint_trajectory_mapping.hpp
src/teleop_controllers/src/: cartesian_impedance_controller.cpp  impedance_math.cpp
src/teleop_controllers/test/: test_impedance_controller.cpp  test_impedance_math.cpp
src/teleop_description/: CMakeLists.txt  package.xml
src/teleop_description/config/: joint_limits.yaml
src/teleop_description/launch/: description.launch.py
src/teleop_description/meshes/: .gitkeep
src/teleop_description/urdf/: panda.ros2_control.xacro  panda.urdf.xacro
src/teleop_input/: package.xml  setup.py
src/teleop_input/config/: input_params.yaml  teleop_config.yaml
src/teleop_input/teleop_input/: driver_base.py  gamepad_driver.py  keyboard_driver.py  keyboard_reader.py  spacemouse_driver.py  teleop_input_node.py
src/teleop_input/test/: test_colcon_teleop_input.py
src/teleop_interfaces/: CMakeLists.txt  package.xml
src/teleop_interfaces/msg/: DriveStatus.msg  DriveStatusArray.msg  SafetyStatus.msg
src/teleop_interfaces/srv/: TriggerEstop.srv
src/teleop_moveit_config/: CMakeLists.txt  package.xml
src/teleop_moveit_config/config/: joint_limits.yaml  kinematics.yaml  servo.yaml
src/teleop_moveit_config/launch/: servo.launch.py
src/teleop_moveit_config/scripts/: initialize_servo
src/teleop_moveit_config/srdf/: panda.srdf
src/virtual_servo_driver/: package.xml  setup.cfg  setup.py
src/virtual_servo_driver/config/: ds402.dbc  servo_config.yaml
src/virtual_servo_driver/test/: test_ds402_state_machine.py  test_pdo_codec.py
src/virtual_servo_driver/virtual_servo_driver/: current_loop.py  driver_node.py  ds402_state_machine.py  pdo_codec.py  sdo_server.py
tests/: test_domain_randomizer.py  test_ds402_state_machine.py  test_gripper_driver.py  test_lerobot_recorder.py  test_mujoco_sim_fallback_fk.py  test_pdo_codec.py  test_teleop_input.py
