<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>canopen_hw_interface</name>
  <version>2.0.0</version>
  <description>
    ros2_control SystemInterface plugin that maps joint command/state
    interfaces to a CANopen DS402 fieldbus (vcan0/can0). In sim mode it talks
    to the MuJoCo physics server over the /sim backplane.
  </description>
  <maintainer email="ina@example.com">Ina</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>teleop_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
