<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lerobot_recorder</name>
  <version>2.0.0</version>
  <description>
    L7 multi-modal recorder. Time-aligns joint_states, ee_pose, ft, gripper,
    rgb, depth and teleop action, then writes a LeRobot-format dataset.
  </description>
  <maintainer email="ina@example.com">Ina</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>message_filters</depend>
  <depend>teleop_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
