<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>safety_monitor</name>
  <version>2.0.0</version>
  <description>
    L1 safety layer. Gates teleop commands through joint-limit, workspace,
    velocity monitors and a communication watchdog, with a latching E-Stop
    wired to the DS402 Quick Stop. Publishes /safe_master_pose only when safe.
  </description>
  <maintainer email="ina@example.com">Ina</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>teleop_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
