<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_bringup</name>
  <version>2.0.0</version>
  <description>
    Top-level launch orchestration and controller_manager config for the V2
    teleoperation stack (description, simulation, fieldbus, ros2_control,
    safety, motion, recording).
  </description>
  <maintainer email="ina@example.com">Ina</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>teleop_description</exec_depend>
  <exec_depend>teleop_interfaces</exec_depend>
  <exec_depend>canopen_hw_interface</exec_depend>
  <exec_depend>teleop_controllers</exec_depend>
  <exec_depend>safety_monitor</exec_depend>
  <exec_depend>teleop_input</exec_depend>
  <exec_depend>virtual_servo_driver</exec_depend>
  <exec_depend>mujoco_sim</exec_depend>
  <exec_depend>camera_bridge</exec_depend>
  <exec_depend>gripper_driver</exec_depend>
  <exec_depend>lerobot_recorder</exec_depend>
  <exec_depend>teleop_moveit_config</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
