<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_description</name>
  <version>2.0.0</version>
  <description>
    Robot description (URDF/xacro) for the teleoperation arm, including the
    ros2_control tag that binds joints to the canopen_hw_interface system.
    Scaffold uses a simplified 7-DOF Panda-like chain; replace with
    franka_description meshes for the real model.
  </description>
  <maintainer email="ina@example.com">Ina</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
